html app inside node.js structure base

--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,28 @@
     <title>Swimming Pool</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <!--CSS-->
-    <link rel="stylesheet" href="public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="public/css/main.css">
-    <!--JS-->
-    <script src="public/js/lib/angular.min.js"></script>
-    <script src="public/js/lib/angular-ui-router.min.js"></script>
+    <!--<link rel="stylesheet" href="public/css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="public/css/main.css">-->
+    <!--&lt;!&ndash;JS&ndash;&gt;-->
+    <!--<script src="public/js/lib/angular.min.js"></script>-->
+    <!--<script src="public/js/lib/angular-ui-router.min.js"></script>-->
 
-    <!--App -->
-    <script src="public/app.js"></script>
-    <script src="public/directives.js"></script>
-    <script src="public/js/services/users.service.js"></script>
+    <!--&lt;!&ndash;App &ndash;&gt;-->
+    <!--<script src="public/app.js"></script>-->
+    <!--<script src="public/directives.js"></script>-->
+    <!--<script src="public/js/services/users.service.js"></script>-->
 </head>
 
-<body ng-app="myApp">
+<body>
 <!-- wrapper  -->
 <div id="wrapper">
     <!--navigation-bar -->
-    <navigation-bar></navigation-bar>
+    asdsafd
+    dsf
+    dsf
+    dsf
+    dsf
+    <!--<navigation-bar></navigation-bar>-->
     <!-- main  -->
     <main ui-view>
 
