ui start with menu and groovy picture!

--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,26 @@
     <title>Swimming Pool</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <!--CSS-->
-    <!--<link rel="stylesheet" href="public/css/bootstrap.min.css">-->
-    <!--<link rel="stylesheet" href="public/css/main.css">-->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <!--&lt;!&ndash;JS&ndash;&gt;-->
-    <!--<script src="public/js/lib/angular.min.js"></script>-->
-    <!--<script src="public/js/lib/angular-ui-router.min.js"></script>-->
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-ui-router.min.js"></script>
 
-    <!--&lt;!&ndash;App &ndash;&gt;-->
-    <!--<script src="public/app.js"></script>-->
+    <!--App -->
+    <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="./components/menu/menu.js"></script>
+
     <!--<script src="public/directives.js"></script>-->
-    <!--<script src="public/js/services/users.service.js"></script>-->
 </head>
 
-<body>
+<body ng-app="myApp">
 <!-- wrapper  -->
 <div id="wrapper">
     <!--navigation-bar -->
-    asdsafd
-    dsf
-    dsf
-    dsf
-    dsf
-    <!--<navigation-bar></navigation-bar>-->
+    <header>
+        <img src="/images/pool.png"/>
+    </header>
     <!-- main  -->
     <main ui-view>
 
