--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <!--App -->
     <script type="text/javascript" src="./app.js"></script>
     <script type="text/javascript" src="./components/menu/menu.js"></script>
+    <script type="text/javascript" src="./components/addClient/addClient.js"></script>
 
     <!--<script src="public/directives.js"></script>-->
 </head>
