starting of autoComplete

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
     <script type="text/javascript" src="./components/menu/menu.js"></script>
     <script type="text/javascript" src="./components/addClient/addClient.js"></script>
+    <script type="text/javascript" src="./components/addOrder/addOrder.js"></script>
 
 
     <!--<script src="public/directives.js"></script>-->
@@ -26,7 +27,7 @@
 <!-- wrapper  -->
 <div id="wrapper">
     <!--navigation-bar -->
-    <header>
+    <header ui-sref="menu">
         <img src="/images/pool.png"/>
     </header>
     <!-- main  -->
