try to reach public dir #2

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <title>Swimming Pool</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <!--CSS-->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/ngDialog.min.css">
-    <link rel="stylesheet" href="css/ngDialog-theme-default.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/ngDialog.min.css">
+    <link rel="stylesheet" href="./css/ngDialog-theme-default.min.css">
     <!--&lt;!&ndash;JS&ndash;&gt;-->
-    <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="js/ngDialog.min.js"></script>
+    <script type="text/javascript" src="./js/angular.min.js"></script>
+    <script type="text/javascript" src="./js/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="./js/ngDialog.min.js"></script>
 
     <!--App -->
     <script type="text/javascript" src="./app.js"></script>
