--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="./components/menu/menu.js"></script>
     <script type="text/javascript" src="./components/addClient/addClient.js"></script>
     <script type="text/javascript" src="./components/addOrder/addOrder.js"></script>
+    <script type="text/javascript" src="./components/orders/orders.js"></script>
 
 
     <!--<script src="public/directives.js"></script>-->
