--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,15 @@
     <script type="text/javascript" src="./js/angular.min.js"></script>
     <script type="text/javascript" src="./js/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./js/ngDialog.min.js"></script>
+    <script type="text/javascript" src="./js/ngStorage.min.js"></script>
 
     <!--App -->
     <script type="text/javascript" src="./app.js"></script>
     <script type="text/javascript" src="./components/services/apiService.js"></script>
+    <script type="text/javascript" src="./components/services/authService.js"></script>
 
+
+    <script type="text/javascript" src="./components/signIn/signIn.js"></script>
     <script type="text/javascript" src="./components/menu/menu.js"></script>
     <script type="text/javascript" src="./components/addClient/addClient.js"></script>
     <script type="text/javascript" src="./components/addOrder/addOrder.js"></script>
