auth progress at fe

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
 <div id="wrapper">
     <!--navigation-bar -->
     <header>
+        <div class="userPanel" ng-if="$root.userName">
+            <span>{{$root.userName}}</span>
+            <span class="logout">התנתק</span>
+        </div>
         <img ui-sref="menu" src="/images/pool.png"/>
     </header>
     <!-- main  -->
