--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Swimming Pool</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <!--CSS-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
