adding sweetalert and login error message

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/ngDialog.min.css">
     <link rel="stylesheet" href="./css/ngDialog-theme-default.min.css">
+    <link rel="stylesheet" href="./css/sweet-alert.css">
     <!--&lt;!&ndash;JS&ndash;&gt;-->
     <script type="text/javascript" src="./js/angular.min.js"></script>
     <script type="text/javascript" src="./js/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./js/ngDialog.min.js"></script>
     <script type="text/javascript" src="./js/ngStorage.min.js"></script>
+    <script type="text/javascript" src="./js/SweetAlert.min.js"></script>
+    <script type="text/javascript" src="./js/SweetAlert.js"></script>
 
     <!--App -->
     <script type="text/javascript" src="./app.js"></script>
