send in blue mailing

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="./components/addClient/addClient.js"></script>
     <script type="text/javascript" src="./components/addOrder/addOrder.js"></script>
     <script type="text/javascript" src="./components/orders/orders.js"></script>
+    <script type="text/javascript" src="./components/orders/mailOrder/mailOrder.js"></script>
 
 
     <!--<script src="public/directives.js"></script>-->
